<resources>
    <string name="app_name" translatable="false">Quick Insta Saver</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="share_txt" translatable="false">Hey view/download this image</string>
    <string name="share_image_via" translatable="false">Share File via...</string>
    <string name="share_app_message" translatable="false">Download All Videos using this app. Download Now</string>

    <string name="about_content" translatable="false">Version: 1.0\nDeveloped by:-\ncodingdunia2019@gmail.com</string>
    <string name="aboutInfo" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="insta_app_name" translatable="false">Instagram</string>
    <string name="insta_tag" translatable="false"><![CDATA[Download Instagram Images & Videos]]></string>
    <string name="whatsapp_app_name" translatable="false">WA &amp; WA Business</string>
    <string name="whatsapp_tag" translatable="false"><![CDATA[Save Whatsapp Status Image & Videos]]></string>
    <string name="tiktok_app_name" translatable="false">TikTok</string>
    <string name="tiktok_tag" translatable="false">Download TikTok Videos</string>
    <string name="likee_app_name" translatable="false">Likee</string>
    <string name="likee_tag" translatable="false">Download Likee Videos</string>
    <string name="facebook_app_name" translatable="false">Facebook</string>
    <string name="fcebook_tag" translatable="false">Download Facebook Videos</string>
    <string name="twitter_app_name" translatable="false">Twitter</string>
    <string name="twitter_tag" translatable="false"><![CDATA[Download Twitter Images & Videos]]></string>
    <string name="gallery_name" translatable="false">Gallery</string>
    <string name="gallery_tag">View All Your Downloaded Media</string>
    <string name="aboutus_name">About Us</string>
    <string name="aboutus_tag">Know More About App</string>
    <string name="share_app_name">Share App</string>
    <string name="share_app_tag">Share App with Your Friends</string>
    <string name="rate_app_name">Rate App</string>
    <string name="rate_tag">Show Some Love. Rate on Play Store</string>
    <string name="more_app_name">More App</string>
    <string name="more_app_tag">View Our Other Creations</string>

    <!--About Page-->
    <string name="version_name">Version</string>
    <string name="version_tag"> Version 1.0.0</string>
    <string name="company_name_title">Company</string>
    <string name="company_tag_name">Coding Dunia</string>
    <string name="email_title">Email</string>
    <string name="email_tag">codingdunia2019@gmail.com</string>
    <string name="website_title">Website</string>
    <string name="website_tag">http://codingdunia.com/</string>
    <string name="contact_title">Contact</string>
    <string name="contact_tag">+91-9876543210</string>
    <string name="privacy_title">Privacy Policy</string>
    <string name="privacy_tag">Click to Read Privacy Policy</string>
    <string name="about_title">About</string>
    <string name="second_how_too">2. Share with Quick Insta Saver</string>
    <string name="fourth_how_too">2. Open Quick Insta Saver</string>
    <string name="prv_policy">Privacy Policy</string>
    <string name="opn_fb">1. Open Facebook</string>
    <string name="copy_video_link_frm_fb">1. Copy Video Link from Facebook</string>
    <string name="enter_url">Enter Url</string>
    <string name="enter_valid_url">Enter Valid Url</string>

    <string name="do_u_want_to_dlt">Do you want to delete?</string>
    <string name="file_deleted">File Deleted.</string>
    <string name="opn_insta">1. Open Instagram</string>
    <string name="cancel">Cancel</string>
    <string name="do_u_want_to_download_media_from_pvt">Don\'t Want to Download Media from Private Account?</string>
    <string name="no_net_conn">No Internet Connection</string>
    <string name="downloadin_video">Downloading Video...</string>
    <string name="download_complete">Download Completed</string>
    <string name="pls_bck_again">Please click BACK again to exit</string>
    <string name="app_not_available">App Not Available.</string>
    <string name="error_occurred">Error Occurred</string>
    <string name="open_tiktok">1. Open TikTok</string>
    <string name="open_likee">1. Open Likee</string>
    <string name="copy_video_link_from_likee">1. Copy Video Link from Likee</string>
    <string name="open_twitter">1. Open Twitter</string>
    <string name="no_media_on_tweet">No Media on Tweet or Invalid Link</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="saved_to">Saved to:</string>
    <string name="whatsapp_not_installed">Whtasapp not installed.</string>
    <string name="no_app_installed">No application found to open this file.</string>


    <string name="change_lang">Change Language</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="change_your_language">Change Your Language</string>
    <string name="arabic">العربية</string>
    <string name="how_to_download">How to Download</string>
    <string name="or_download_using_copied_link">or Download using copied link</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="download_from_private_account">Download from Private Account</string>
    <string name="paste_link">Paste Link</string>
    <string name="without_watermark">Without Watermark</string>
    <string name="with_watermark">With Watermark</string>
    <string name="download">Download</string>
    <string name="paste">Paste</string>
    <string name="no_result_found">No Result Found</string>
    <string name="downloading">Downloading...</string>
    <string name="getting_downloading_link">Getting Downloading Link...</string>


    <string name="gallery">Gallery</string>
    <string name="download_started">Download Started</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="view_stories">View Stories and Download from Private Account</string>
    <string name="login">Login</string>
    <string name="stories">Stories</string>


</resources>