<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FragmentHomeBottom">

    <RelativeLayout
        android:id="@+id/RLEdittextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white"
        android:elevation="3dp"
        android:padding="10dp"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/et_back"
            android:hint="@string/paste_link"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="15sp" />


        <LinearLayout
            android:id="@+id/RLDownloadLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_text"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/login_btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/et_back"
                android:backgroundTint="@color/pink_500"
                android:gravity="center"
                android:padding="14dp"
                android:text="@string/download"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/download_txt_size" />

            <TextView
                android:id="@+id/tv_paste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/et_back"
                android:backgroundTint="@color/pink_500"
                android:gravity="center"
                android:padding="14dp"
                android:text="@string/paste"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/paste_txt_size" />

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>