<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/LLHowToLayout"
    android:layout_margin="10dp"
    android:elevation="3dp"
    android:background="@drawable/rectangle_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/how_to_download"
        android:textColor="@color/black"
        android:id="@+id/tvHowToHeadOne"
        android:textSize="18sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rectangle_white"
        android:id="@+id/LLHowToOne"
        android:elevation="3dp"
        android:layout_margin="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="1. Open Instagram"
        android:id="@+id/tvHowTo1"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/insta1"
        android:id="@+id/im_howto1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/second_how_too"
        android:id="@+id/tvHowTo2"
        android:textStyle="bold"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/insta2"
        android:id="@+id/im_howto2"
        />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/tvHowToHeadTwo"
        android:text="@string/or_download_using_copied_link"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rectangle_white"
        android:elevation="3dp"
        android:layout_margin="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="1. Open Instagram"
        android:id="@+id/tvHowTo3"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/insta3"
        android:id="@+id/im_howto3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fourth_how_too"
        android:id="@+id/tvHowTo4"
        android:textStyle="bold"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/insta4"
        android:id="@+id/im_howto4" />
    </LinearLayout>
</LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>